--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ a {
     padding: 2px 10px;
     background-color: #252D5D;
     float: right;
+    display: none;
     margin-left: 10px;
     cursor: pointer;
     -webkit-transition: background-color .5s;
@@ -59,7 +60,7 @@ a {
 
 .box_content p {
     font-weight: 100;
-    color: #54565F;
+    color: #252733;
 }
 .box_content h2 {
     color: #252D5D;
@@ -75,13 +76,15 @@ a {
 }
 .box_content {
     position: relative;
-    top: 220px;
+    top: 125px;
     left: 22%;
     right: 0;
     background-color: rgba(255,255,255,0.5);
-    width: 85%;
+    width: 65%;
     max-width: 700px;
     padding: 10px 25px;
+    border-radius: 5px;
+    box-shadow: 0 0 1px #ABAEBF;
 }
 .calification {
     background-image: url('../img/calificacion.png');
@@ -110,8 +113,8 @@ header {
     overflow: hidden;
 }
 header .logo{
-	float: left;
-	margin-top: 2px;
+    float: left;
+    margin-top: 2px;
 }
 header .logo img {
     width: 75%;
@@ -120,25 +123,24 @@ header nav {
     float: right;
 }
 .main_header {
-    padding: 20px 0;
+    padding: 10px;
+    overflow: hidden;
 }
 .main_header a:nth-child(4){
     float: right;
     padding-right: 0;
 }
 .main_header a{
-    padding-right: 20px;
+    padding: 0px;
 }
 a:focus{
     color: #fff;
 }
 header nav li {
     list-style-type: none;
-    position: relative;
-    float: left;
-    width: 33.33%;
     border-left: 1px solid #2a3b72;
     border-right: 1px solid #071235;
+    padding: 0!important;
 }
 header nav li span {
     padding-right: 10px;
@@ -164,6 +166,22 @@ header nav a:hover {
 }
 header nav {
     width: 100%;
+}
+header nav ul {
+    padding: 0;
+    margin: 0;
+}
+.logo_box {
+    display: table;
+    margin: 0 auto;
+}
+.logo_box > a > img {
+    margin: auto;
+    display: table;
+    width: 100%;
+}
+.logo_box.one, .logo_box.two {
+    margin-top: 25px;
 }
 
 /* home Background*/
@@ -210,6 +228,7 @@ section.home-bg nav li {
     padding: 14px 0;
     position: relative;
     top: 0;
+    right: 15px;
     height: 50px;
     width: 0px;
     -webkit-transition: all .5s ease;
@@ -235,6 +254,7 @@ section.home-bg nav span {
     background-color: #252D5D;
     text-align: center;
     padding-top: 13px;
+    cursor: pointer;
 }
 section.home-bg nav span:nth-child(2){
     top: 148px;
@@ -272,8 +292,7 @@ footer {
     color: #252d5d;
 }
 .logo_footer {
-    position: relative;
-    top: 90px;
+    padding-top: 90px;
 }
 .paragraph > span {
     margin-top: 10px;
@@ -284,12 +303,13 @@ footer {
 }
 .paragraph .line {
     border-bottom: 2px solid white;
-    width: 90%;
+    width: 100%;
+    max-width: 350px;
     position: absolute;
 }
 .paragraph .line:nth-child(3) {
     border-bottom: 2px solid #252D5D;
-    width: 50%;
+    width: 25%;
 }
 .paragraph > p:nth-child(4) {
     margin-top: 20px;
@@ -315,15 +335,18 @@ footer {
     background-color: #EFB616;
     padding: 20px 0;
 }
-.home-bg.finanzas{
+.home-bg.finanzas,
+.home-bg.vivienda{
     position: relative;
 }
 .stick {
     background-color: rgba(255,255,255,0.8);
     height: 60px;
     position: absolute;
+    width: 100%;
+    max-width: 800px;
     top: 10%;
-    width: 55%;
+    border-radius: 0 5px 5px 0;
 }
 .stick .container h2 {
     line-height: 60px;
@@ -332,6 +355,7 @@ footer {
     font-style: italic;
     font-size: 40px;
     font-weight: 800;
+    width: 100%;
 }
 .stick h2 span {
     position: relative;
@@ -341,7 +365,7 @@ footer {
 }
 ul.submenu_left {
     position: absolute;
-    top: 30%;
+    top: 25%;
     float: left;
 }
 ul.submenu_left li a {
@@ -363,6 +387,14 @@ ul.submenu_left li a.active{
 
 .vivienda {
     background-image: url(../img/vivienda.jpg);
+}
+section.home-bg.vivienda .submenu_left li a {
+    font-size: 12px;
+    padding: 6px 0px 6px 6px;
+}
+section.home-bg.vivienda .submenu_left {
+    top: 25%;
+    width: 240px;
 }
 
 /* Header arrows */
@@ -398,11 +430,17 @@ header nav li a.active {
     float: right;
     clear: right;
     margin-top: 15px;
+    cursor: pointer;
     -webkit-transition: all .5s;
        -moz-transition: all .5s;
         -ms-transition: all .5s;
          -o-transition: all .5s;
             transition: all .5s;
+}
+.go_back img {
+    display: table;
+    margin: auto;
+    padding-top: 22px;
 }
 
 .go_back .icon-reply {
@@ -419,4 +457,122 @@ header nav li a.active {
 }
 .go_back:hover{
     background-color: #EFB616;
+}
+
+/* Tabs Content */
+
+.tabs_content{
+    display: none;
+}
+.tabs_content.active{
+    display: block;
+}
+
+/* home box_content */
+
+section.home .box_content {
+    top: 220px;
+}
+
+@media screen and (max-width: 768px){
+    
+    .home-bg nav{
+        display: none;
+        /*position: fixed;*/
+    }
+    .box_content{
+        width: 90%;
+        margin: 0 1% 0 1.2%;
+        top: 152px;
+        left: 1px;
+        font-size: 12px;
+    }
+    .logo_box{
+        margin-bottom: 10px;
+    }
+    .logo_footer {
+        padding-top: 0;
+    }
+    header nav li a.active:after{
+        border: none;
+    }
+    header nav li a{
+        border-bottom: 1px solid #2a3b72;
+        border-top: 1px solid #071235;
+    }
+    header nav li a.active {
+        border-bottom: 1px solid transparent;
+        border-top: 1px solid transparent;
+    }
+    ul.submenu_left{
+        left: 3%;
+    }
+    ul.submenu_left li {
+        float: left;
+    }
+    ul.submenu_left li a{
+        border: none;
+        padding: 5px 7px;
+        margin: 0 2px;
+        border-radius: 5px 5px 0 0;
+        font-size: 12px;
+        border-bottom: none;
+    }
+    .box_content h2 {
+        margin: 0;
+        font-size: 20px;
+        padding: 5px 0 10px 0;
+    }
+    .box_content h3{
+        font-size: 14px;
+    }
+    .calification{
+        width: 190px;
+        right: -21px;
+    }
+
+}
+@media screen and (min-width: 769px) and (max-width: 990px){
+    
+    .logo_footer{
+        padding-top: 0;
+    }
+    .box_content {
+        top: 152px;
+        left: 1px;
+        font-size: 12px;
+    }
+    .box_content h3{
+        font-size: 14px;
+    }
+    ul.submenu_left{
+        left: 1%;
+    }
+    ul.submenu_left li {
+        float: left;
+    }
+    ul.submenu_left li a{
+        border: none;
+        padding: 5px 7px;
+        margin: 0 2px;
+        border-radius: 5px 5px 0 0;
+        font-size: 12px;
+        border-bottom: none;
+    }
+    .box_content h2 {
+        margin: 0;
+        font-size: 20px;
+        padding: 5px 0 10px 0;
+    }
+    .calification{
+        width: 190px;
+        right: -21px;
+    }
+}
+@media screen and (min-width: 991px){
+    
+    .box_content{
+        left: 22%;
+    }
+
 }
