--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ html,body{
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: #000;
+}
 li{
     list-style-type: none;
 }
@@ -85,6 +88,7 @@ a {
     padding: 10px 25px;
     border-radius: 5px;
     box-shadow: 0 0 1px #ABAEBF;
+    z-index: 9999;
 }
 .calification {
     background-image: url('../img/calificacion.png');
@@ -473,6 +477,59 @@ header nav li a.active {
 section.home .box_content {
     top: 220px;
 }
+
+/* Heroes */
+.heroes {
+    background-image: url(../img/bg-sky.jpg);
+}
+.heroes .tabs_content {
+    display: block;
+}
+
+section.home-bg.heroes .box_content {
+    font-size: 0.85em;
+    height: 320px;
+    padding: 25px 15px 15px 15px;
+}
+.wood{
+    background-image: url(../img/wood.png);
+    width: 402px;
+    height: 72px;
+    background-repeat: no-repeat;
+}
+.wood h2 {
+    font-size: 1.2em!important;
+    text-align: center;
+    font-weight: 400;
+    font-style: normal!important;
+}
+section.home-bg.heroes .stick {
+    background-color: transparent;
+}
+.planet{
+    background-image: url(../img/world.png);
+    width: 461px;
+    height: 440px;
+    background-size: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 15%;
+    left: 0%;
+    animation-name: planet;
+    animation-iteration-count: infinite;
+    animation-duration: 60s;
+    animation-timing-function: linear;
+}
+@keyframes planet {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
 
 @media screen and (max-width: 768px){
     
